--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
             <ul class="sidebar-menu">
               <li>
-                <a href="/?option=home" class="nav-link" id="home">
+                <a href="?option=home" class="nav-link" id="home">
                   <span class="icon">
                     <svg xmlns="http://www.w3.org/2000/svg" aria-label="Home" class="_ab6-" color="rgb(0, 0, 0)" fill="rgb(0, 0, 0)" height="24" role="img" viewBox="0 0 24 24" width="24">
                       <path d="M9.005 16.545a2.997 2.997 0 0 1 2.997-2.997A2.997 2.997 0 0 1 15 16.545V22h7V11.543L12 2 2 11.543V22h7.005Z" fill="none" stroke="#000000" stroke-linejoin="round" stroke-width="2px"></path>
@@ -29,7 +29,7 @@
                 </a>
               </li>
               <li>
-                <a href="/?option=attack_potential_calculator" class="nav-link" id="attack_potential_calculator">
+                <a href="?option=attack_potential_calculator" class="nav-link" id="attack_potential_calculator">
                   <span class="icon">
                     <svg width="24" height="24" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M40 4H8.0002C6.89565 4 6.00022 4.89541 6.0002 5.99996L5.99955 42C5.99953 43.1045 6.89497 44 7.99955 44H40C41.1046 44 42 43.1046 42 42V6C42 4.89543 41.1046 4 40 4Z" fill="none" stroke="#333" stroke-width="4" stroke-linejoin="round"/><path d="M35 10H13V19H35V10Z" fill="none" stroke="#333" stroke-width="4" stroke-linejoin="round"/><path d="M12 28L19 35" stroke="#333" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/><path d="M19 28L12 35" stroke="#333" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/><path d="M28 35H36" stroke="#333" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/><path d="M28 29H36" stroke="#333" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/></svg>
                   </span>
