--- a/attack_potential_21434_2021_calculator.html
+++ b/attack_potential_21434_2021_calculator.html
@@ -21,7 +21,7 @@
             Attack potential in ISO/SAE 21434 I.2 I.3, as defined in ISO/IEC 18045, is a measure of the effort to be expended in attacking an item or component, expressed in terms of an attacker's expertise and resources. Attack potential relies on five core parameters: elapsed time, expertise, equipment, knowledge of the item or component, window of opportunity. 
           </p>
           <fieldset id="AP_calc">
-            <legend id="baseMetricGroup_Legend" title="The Base Metric group represents the intrinsic  characteristics of a vulnerability that are constant over time and across user environments. Determine the vulnerable component and score Attack Vector, Attack Complexity, Privileges Required and User Interaction relative to this.">Attack Potential Score  ISO/SAE 21434:2021</legend>
+            <legend id="baseMetricGroup_Legend" title="The Base Metric group represents the intrinsic  characteristics of a vulnerability that are constant over time and across user environments. Determine the vulnerable component and score Attack Vector, Attack Complexity, Privileges Required and User Interaction relative to this.">Attack Potential Score for ISO/SAE 21434:2021</legend>
             <div class="column column-left">
               <div class="metric Elapsed_Time">
                 <h3 id="Elapsed_Time_Heading" title="">Elapsed Time</h3>
