Add Tool 'WMI Lookup'

--- a/index.html
+++ b/index.html
@@ -36,7 +36,16 @@
                   Attack Potential Calc
                 </a>
               </li>
-  
+
+              <li>
+                <a href="?option=WMI_lookup" class="nav-link" id="WMI_list">
+                  <span class="icon">
+                    <?xml version="1.0" encoding="UTF-8"?><svg width="24" height="24" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"><rect x="17" y="6" width="14" height="28" fill="none" stroke="#333" stroke-width="4" stroke-linejoin="round"/><path d="M42 42H6" stroke="#333" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/></svg>
+                  </span>
+                  WMI Lookup
+                </a>
+              </li>
+              
               <li>
                 <a href="https://github.com/delikely/Automotive-Security-Toolkit" target="_blank" class="nav-link">
                   <span class="icon">
