--- a/attack_potential_18045_2022_calculator.html
+++ b/attack_potential_18045_2022_calculator.html
@@ -5,7 +5,7 @@
     <link rel="shortcut icon" href="static/images/vulnerability.png">
 
     <link rel="stylesheet" href="static/css/bootstrap.min.css">
-    <link rel="stylesheet" href="static/css/bootstrap-icons.css">
+    <!-- <link rel="stylesheet" href="static/css/bootstrap-icons.css"> -->
 
     <link href="static/css/attack potential calculator.css" rel="stylesheet" />
 
